--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -307,6 +307,8 @@
                                     <img class="rounded" width="80" height="80" src="https://radioforus.com/wp-content/uploads/2023/02/Radioforus.png" style="display: block; margin-left: auto; margin-right: auto; background-color: white"/>
                                     
                                     <h1 align="center" style="font-weight:600">Donate Pi cryptocurrency here</h1>
+                                    <h3 t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" align="center" style="font-weight:600">Mainnet</h3>
+                                    <h3 t-else="" align="center" style="font-weight:600">Testnet</h3>
                                     <h3 align="center" style="font-weight:600" class="show-not-verified-user">Get verified</h3>
                                     
                                     <t t-set="amount_end" t-value="round(amount*3, 7)"/>
