--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1241,7 +1241,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-6" style="text-align: right">
-                                    <a t-att-href="'/pinetwork' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else 'https://latinchain.pinet.com/pinetwork'" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Pay Pi (Mainnet)</a>
+                                    <a t-att-href="'/pinetwork' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else 'https://latinchain.pinet.com/pinetwork'" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Mainnet</a>
                                 </div>
                                 <div class="col-6" style="text-align: left">
                                     <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
@@ -1256,7 +1256,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-6" style="text-align: right">
-                                    <a t-att-href="'/pinetwork' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else 'https://latinchain.pinet.com/pinetwork'" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Pay Pi (Mainnet)</a>
+                                    <a t-att-href="'/pinetwork' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else 'https://latinchain.pinet.com/pinetwork'" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Mainnet</a>
                                 </div>
                                 <div class="col-6" style="text-align: left">
                                     <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
@@ -1273,7 +1273,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-6" style="text-align: right">
-                                    <a t-att-href="'/pinetwork' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else 'https://latinchain.pinet.com/pinetwork'" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Pay Pi (Mainnet)</a>
+                                    <a t-att-href="'/pinetwork' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else 'https://latinchain.pinet.com/pinetwork'" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Mainnet</a>
                                 </div>
                                 <div class="col-6" style="text-align: left">
                                     <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
