--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1356,9 +1356,10 @@
                         
                         <!-- LatinChain Ad responsive 2 -->
                         
+                        <!--
                         <br/>
                         
-                        <!--<ins class="adsbygoogle"
+                        <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-2334449220276386"
                              data-ad-slot="9525388880"
