--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1491,7 +1491,7 @@
                             </div>
                             
                             <div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded show_pi_ad_automatic" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px">
-                              <input class="form-check-input" type="checkbox" id="pi_ad_automatic" disabled="true" checked="true" />
+                              <input class="form-check-input" type="checkbox" id="pi_ad_automatic" disabled="true" />
                               <label class="form-check-label" for="pi_ad_automatic">
                                 <br/>
                                 <div class="text-white">
