--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -947,7 +947,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.862"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.863"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -997,6 +997,7 @@
                     <input type="hidden" id="a_ads_val" t-att-value="a_ads"/>
                     <input type="hidden" id="mainnet" t-att-value="mainnet"/>
                     <input type="hidden" id="pi_ad_seconds" t-att-value="pi_ad_seconds"/>
+                    <input type="hidden" id="total_users_verified_count" t-att-value="total_users_verified_count"/>
                     <button id="open_mainnet_redirect" class="open_mainnet_redirect" style="display:none"></button>
                     <t t-if="pi_main_user">
                         <input type="hidden" id="pi_main_user" t-att-value="pi_main_user.pi_user_code"/>
@@ -3215,7 +3216,7 @@
                                     <h3 t-else="" align="center" style="color: black !important; font-weight:600">LatinChain Testnet</h3>
                                 </div>
                                 <div style="" class="row">
-                                    <a t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" class="PayPiLink btn btn-success rounded col-12" style="border: 2px solid black; color: white !important; font-weight: bold;" href="https://latinchain.pinet.com/pinetwork" target="_blank">Pay Pi To Unlock</a>
+                                    <a t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" class="PayPiLink btn btn-success rounded col-12" style="border: 2px solid black; color: white !important; font-weight: bold;" href="https://latinchain.pinet.com/pinetwork" target="_blank">Pay Pi To Unlock (Please)</a>
                                     <a t-else="" class="PayPiLink btn btn-success rounded col-12" style="border: 2px solid black; color: white !important; font-weight: bold;" href="https://latinchaintest9869.pinet.com/pinetwork" target="_blank">Pay Pi To Unlock</a>
                                 </div>
                                 <div style="margin-top: 10px;" class="row">
