--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1296,8 +1296,8 @@
                                 <div class="isverified-username font-weight-bold" style="display: none;"></div>
                             </div>
                             <div style="text-align:right; padding-left: 0px; font-size: 80%" class="col-6">
-                                <button class="logout_latinchain btn btn-outline-danger font-weight-bold text-white border-white loggedin" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div><i class="fa-solid fa-right-from-bracket"></i></div></button>
-                                <button class="login_latinchain btn btn-outline-success font-weight-bold text-white border-white loggedout" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div><i class="fa-solid fa-right-to-bracket"></i></div></button>
+                                <button class="logout_latinchain btn btn-danger font-weight-bold text-white border-white loggedin" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div><i class="fa-solid fa-right-from-bracket"></i></div></button>
+                                <button class="login_latinchain btn btn-success font-weight-bold text-white border-white loggedout" style="display: none; border: 2px solid; max-width: 100px; font-size: 100% !important"><div><i class="fa-solid fa-right-to-bracket"></i></div></button>
                                 <button class="btn btn-outline-info font-weight-bold text-white border-white clear_cache" style="border-radius: 50%; border: 2px solid; font-size: 100% !important"><div style=""><i class="fa fa-refresh"></i></div></button>
                                 <button class="btn btn-outline-info font-weight-bold text-white border-white button-share" style="border-radius: 50%; border: 2px solid; font-size: 100% !important"><div style=""><i class="fa fa-share-alt"></i></div></button>
                             </div>
