--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -34,9 +34,12 @@
                     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
                     
+                    <link rel="stylesheet" href="/website_pinetwork_games_odoo/static/src/modals/colorbox/example3/colorbox.css" />
+                    <script id="colorbox-lib" src="/website_pinetwork_games_odoo/static/src/modals/colorbox/jquery.colorbox.js"></script>
+                    
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions.js?v=1.1.131"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions.js?v=1.1.133"></script>
                     
                     <!--<script async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     
@@ -195,7 +198,7 @@
                               position: fixed;
                               top: 0;
                               width: 100%;
-                              z-index:99998;
+                              z-index:9999;
                             }
                             #translate_text_latinchain
                             {
@@ -377,6 +380,10 @@
                                             
                                             <div style="margin-bottom:5px;">
                                                 <a href="https://promote.mexc.com/r/U2hkpZK0" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-right-left"></i></div><div style="font-size:100%;" translate="no">JOIN MEXC AND TRADE PI</div><div style="font-size:80%;">Pi KYB ready</div></a>
+                                            </div>
+                                            
+                                            <div style="margin-bottom: 5px">
+                                                <button id="rules_button_1" class="col-12 btn btn-warning font-weight-bold text-black border-warning rules_button" style="border: 2px solid;"><div style=""><i class="fa fa-list-ol"></i></div><div style="font-size:100%;" translate="no">Rules</div><div style="font-size:80%;">Rules and Knowledge base</div></button>
                                             </div>
                                             
                                             <div class="p-3 mb-2 bg-secondary bg-gradient text-white rounded col-12" style="filter: contrast(100%) !important;">
